exports[`Section React component Renders Closed with Headline correctly 1`] = `
<section
  className="section"
  id="section">
  <h1
    className="headline">
    Section Title
  </h1>
  <div
    className="article closed">
    Section Content
  </div>
</section>
`;

exports[`Section React component Renders Closed with No Headline correctly 1`] = `
<section
  className="section"
  id="section">
  <nav
    className="title"
    onClick={[Function]}
    title="Open Section: Section Title">
    <svg
      className="toggle"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em">
      <g>
        <path
          d="m31 16.4q0 0.3-0.2 0.5l-10.4 10.4q-0.3 0.3-0.5 0.3t-0.6-0.3l-10.4-10.4q-0.2-0.2-0.2-0.5t0.2-0.5l1.2-1.1q0.2-0.2 0.5-0.2t0.5 0.2l8.8 8.8 8.7-8.8q0.3-0.2 0.5-0.2t0.6 0.2l1.1 1.1q0.2 0.2 0.2 0.5z" />
      </g>
    </svg>
    <h1
      className="title">
      Section Title
    </h1>
  </nav>
  <div
    className="article closed">
    Section Content
    <div
      className="closeButton"
      onClick={[Function]}
      title="Close Section: Section Title">
      <svg
        className="closeIcon"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": "inherit",
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em">
        <g>
          <path
            d="m31 26.4q0 0.3-0.2 0.5l-1.1 1.2q-0.3 0.2-0.6 0.2t-0.5-0.2l-8.7-8.8-8.8 8.8q-0.2 0.2-0.5 0.2t-0.5-0.2l-1.2-1.2q-0.2-0.2-0.2-0.5t0.2-0.5l10.4-10.4q0.3-0.2 0.6-0.2t0.5 0.2l10.4 10.4q0.2 0.2 0.2 0.5z" />
        </g>
      </svg>
      Close Section
    </div>
  </div>
</section>
`;

exports[`Section React component Renders Open with Headline correctly 1`] = `
<section
  className="section"
  id="section">
  <h1
    className="headline">
    Section Title
  </h1>
  <div
    className="article">
    Section Content
  </div>
</section>
`;

exports[`Section React component Renders Open with No Headline correctly 1`] = `
<section
  className="section"
  id="section">
  <nav
    className="title open"
    onClick={[Function]}
    title="Close Section: Section Title">
    <svg
      className="toggle"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em">
      <g>
        <path
          d="m31 26.4q0 0.3-0.2 0.5l-1.1 1.2q-0.3 0.2-0.6 0.2t-0.5-0.2l-8.7-8.8-8.8 8.8q-0.2 0.2-0.5 0.2t-0.5-0.2l-1.2-1.2q-0.2-0.2-0.2-0.5t0.2-0.5l10.4-10.4q0.3-0.2 0.6-0.2t0.5 0.2l10.4 10.4q0.2 0.2 0.2 0.5z" />
      </g>
    </svg>
    <h1
      className="title">
      Section Title
    </h1>
  </nav>
  <div
    className="article">
    Section Content
    <div
      className="closeButton"
      onClick={[Function]}
      title="Close Section: Section Title">
      <svg
        className="closeIcon"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": "inherit",
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em">
        <g>
          <path
            d="m31 26.4q0 0.3-0.2 0.5l-1.1 1.2q-0.3 0.2-0.6 0.2t-0.5-0.2l-8.7-8.8-8.8 8.8q-0.2 0.2-0.5 0.2t-0.5-0.2l-1.2-1.2q-0.2-0.2-0.2-0.5t0.2-0.5l10.4-10.4q0.3-0.2 0.6-0.2t0.5 0.2l10.4 10.4q0.2 0.2 0.2 0.5z" />
        </g>
      </svg>
      Close Section
    </div>
  </div>
</section>
`;
